<resources>
    <string name="app_name">SmartCities</string>
    <string name="SmartCitiesTitle">Smart Cities</string>
    <string name="addNote">Add Note</string>
    <string name="ConsultNotes">Consult Notes</string>
    <string name="login" translatable="false">Login</string>
    <string name="startSession">Start Session</string>
    <string name="user" translatable="false">Email</string>
    <string name="pass" translatable="false">Password</string>
    <string name="tituloNota">Note Title</string>
    <string name="descricaoNota">Note Description</string>
    <string name="save">Save</string>
    <string name="error" translatable="false">Error</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="erro_add_nota">Note not created - missing data</string>
    <string name="erro_edit_nota">Note not edited - missing data</string>
    <string name="miss_title">Missing Title</string>
    <string name="miss_description">Missing Description</string>
    <string name="erro_email">Missing Email</string>
    <string name="erro_pass">Missing Password</string>
    <string name="erro_login">Fields do not match</string>
    <string name="sucess_login">Login Sucessfull</string>
    <string name="login_pref" translatable="false">pref</string>
    <string name="user_logged" translatable="false">logged</string>
    <string name="email_login_user" translatable="false">email_login_user</string>
    <string name="id_login_user" translatable="false">id_login_user</string>
    <string name="nome_login_user" translatable="false">nome_login_user</string>
    <string name="logout">Logout</string>
    <string name="menu_mapa">Map Menu</string>
    <string name="voltar">Back</string>
    <string name="erro_formato_email">Needs to be an email</string>
    <string name="title_activity_maps">Anomaly Map</string>
    <string name="erro_voltar_atras">Logout to go back</string>
    <string name="erro_voltar_login">Can not go back here</string>
    <string name="Editar">Edit anomaly</string>
    <string name="delete">Delete</string>
    <string name="reported">"Reported by: "</string>
    <string name="tipo">"Type: "</string>
    <string name="report_anom">Report Anomaly</string>
    <string name="editarAnom">Edit Anomaly</string>
    <string name="descricao">Description</string>
    <string name="titulo">Anomaly Title</string>
    <string name="missTitle">Missing Title</string>
    <string name="missDescription">Missing Description</string>
    <string name="editSucess">Anomaly edited with success</string>
    <string name="deleteAnom">Delete Anomaly</string>
    <string name="deleteSuccess">Anomaly deleted with success</string>
    <string name="title_">Title:</string>
    <string name="tipo_">Type:</string>
    <string name="descricao_">Description:</string>
    <string name="chose_img">Select Image:</string>
    <string name="pick_img">Choose Image:</string>
    <string name="add_anomaly">Report Anomaly</string>
    <string name="reportSuccess">Anomaly Reported with Success</string>
    <string name="base_3" translatable="false">base_3</string>
    <string name="miss_img">Image Missing</string>
    <string name="search_type">Search by Anomaly Type:</string>
    <string name="search_distance">Search by Distance:</string>
    <string name="metros">Meters</string>
    <string name="todos">All</string>
    <string name="acidente">Accident</string>
    <string name="obras">Work</string>
    <string name="mau_estado">Bad State</string>
    <string name="indefinido">Undefined</string>
    <string name="metros_500" translatable="false">500 m</string>
    <string name="metros_1500" translatable="false">1500 m</string>
    <string name="metros_3000" translatable="false">3000 m</string>
</resources>