<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".show_note_detail">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloNota"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="22dp"
            android:textColor="@color/azulEscuro"/>

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricaoNota"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="22dp"
            android:textColor="@color/azulEscuro"/>

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:textColor="@color/black"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/azulMedio">

        <Button
            android:id="@+id/AddNote_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ConsultNotes"
            android:backgroundTint="@color/azulMedio"
            android:onClick="ConsultNotas_2"
            android:layout_weight="40">
        </Button>

        <Button
            android:id="@+id/linhabranca_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:text="."
            android:layout_weight="1">
        </Button>

        <Button
            android:id="@+id/consultNote_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/azulMedio"
            android:layout_weight="40"
            android:onClick="login_2">
        </Button>

    </LinearLayout>

</RelativeLayout>